--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 
   </script>
 
-<script charset="UTF-8" id="LA_COLLECT" src="http://sdk.51.la/js-sdk-pro.min.js"></script>
+<script charset="UTF-8" id="LA_COLLECT" src="https://sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id:"3IshXDu9ajKrwaQq",ck:"3IshXDu9ajKrwaQq"})</script>
 
 </body>
